[package]
name = "threshold_decryption_service"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = "1.6.3"
async-trait = "0.1.81"
base64 = "0.22.1"
bincode = "1.3.3"
byteorder = "1.3.4"
ff = "0.6.0"
governor = "0.6.3"
group = "0.6.0"
hex_fmt = "0.3.0"
log = "0.4.8"
mockall = "0.13.0"
pairing = "0.16.0"
rand = "0.7.3"
rand_chacha = "0.2.2"
ring = "0.17.8"
rocket = { version = "0.5.0", features = ["json"] }
rocket_okapi = { version = "0.8.0", features = ["swagger"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.22"
threshold_crypto = "0.4.0"
tiny-keccak = { version = "2.0.1", features = ["sha3"] }
tokio = { version = "1.39.3", features = ["full"] }

